--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div id="root">
         <div>
             <h1></h1>
+            <h1></h1>
         </div>
     </div>
 </body>
+<script src="./App.js"></script>
 </html>
